--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "categories": [
         "Other"
     ],
-    "main": "./out/extension.js",
+    "main": "./dist/extension.js",
     "activationEvents": [
         "onView:woodpecker"
     ],
@@ -149,7 +149,7 @@
         "lint": "eslint src --ext ts",
         "watch": "tsc -watch -p ./",
         "pretest": "yarn run compile && yarn run lint",
-        "test": "node ./out/test/runTest.js",
+        "test": "node ./dist/test/runTest.js",
         "build": "vsce package"
     },
     "devDependencies": {
